# iir-peak-filter

./: .gitignore  CMakeLists.txt  README.md  xFilter.jucer
.github/workflows/: cmake_ctest.yml
CMake/: Findjuce.cmake
PeakFilter/: CMakeLists.txt
PeakFilter/Source/: IIRFilter.cpp  IIRFilter.h  Knob.h  MenuDrawer.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.h
Source/: IIRFilter.cpp  IIRFilter.h  Knob.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
